[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/Cat Body.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/CatDummy/CatDummy.gd" type="Script" id=2]
[ext_resource path="res://assets/images/Mark 1 L.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Ears Inside.png" type="Texture" id=4]
[ext_resource path="res://assets/images/cat_face_1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/cat_face_2.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Ears outside.png" type="Texture" id=7]
[ext_resource path="res://assets/images/Eye Iris.png" type="Texture" id=8]
[ext_resource path="res://assets/images/Eye Pupil.png" type="Texture" id=9]
[ext_resource path="res://assets/images/Mark 9 R.png" type="Texture" id=10]
[ext_resource path="res://assets/images/Cat Nose.png" type="Texture" id=11]
[ext_resource path="res://assets/images/Cat mouth collision.png" type="Texture" id=12]
[ext_resource path="res://assets/images/Cat mouth.png" type="Texture" id=13]
[ext_resource path="res://assets/images/Cat tongue.png" type="Texture" id=14]
[ext_resource path="res://assets/images/cat_face_normal.png" type="Texture" id=15]
[ext_resource path="res://assets/images/cat_face_big_eyes.png" type="Texture" id=16]
[ext_resource path="res://assets/images/cat_face_closed_eyes.png" type="Texture" id=17]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="Cat" type="RigidBody2D" groups=[
"Cat",
"Deletable",
]]
input_pickable = true
collision_mask = 2147483707
physics_material_override = SubResource( 1 )
continuous_cd = 1
contacts_reported = 10
contact_monitor = true
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteBody" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteLegacyFaceNormal" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteLegacyFaceClosed" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteLegacyFaceSurprised" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteEarsOut" type="Sprite" parent="."]
position = Vector2( 0, -21 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteEarsIn" type="Sprite" parent="."]
modulate = Color( 0.854902, 0.6, 0.85098, 1 )
position = Vector2( 0, -22 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteMark1L" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.329412, 0, 1 )
position = Vector2( -18, -10.125 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="SpriteMark2R" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.305882, 0, 1 )
position = Vector2( 22.9699, 21.6917 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 10 )

[node name="SpriteEyes" type="Sprite" parent="."]
visible = false
modulate = Color( 0.815686, 1, 0.611765, 1 )
position = Vector2( 0.15097, -9.06419 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpritePupils" type="Sprite" parent="."]
visible = false
position = Vector2( 0.15097, -9.06419 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteNose" type="Sprite" parent="."]
visible = false
modulate = Color( 0.658824, 0.537255, 0.713726, 1 )
position = Vector2( 0.15097, 2.08462 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteMouthClosed" type="Sprite" parent="."]
visible = false
modulate = Color( 0.533333, 0.533333, 0.533333, 1 )
position = Vector2( 0, 10 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteMouthOpen" type="Sprite" parent="."]
visible = false
modulate = Color( 0.709804, 0.698039, 0.698039, 1 )
position = Vector2( 0, 13 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteTongue" type="Sprite" parent="."]
visible = false
modulate = Color( 0.933333, 0.494118, 0.494118, 1 )
position = Vector2( 0, 13 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 14 )

[node name="SpriteFaceSadLegacy" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
z_index = 1
texture = ExtResource( 6 )

[node name="SpriteFaceNormalLegacy" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="InteractionArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="FaceTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Cat_body_entered"]
[connection signal="mouse_entered" from="InteractionArea" to="." method="_on_InteractionArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractionArea" to="." method="_on_InteractionArea_mouse_exited"]
[connection signal="timeout" from="FaceTimer" to="." method="_on_FaceTimer_timeout"]
